--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -42,3 +42,14 @@ releases:
       release_summary: Update Readme
       minor_changes:
         - Update Readme
+
+  2.1.3:
+    release_date: "2025-03-10"
+    changes:
+      release_summary: Update Modules
+      minor_changes:
+        - Update cisco Modules device_credential_workflow_manager, inventory_workflow_manager, ise_radius_integration_workflow_manager,
+        network_settings_workflow_manager, pnp_workflow_manager, provision_workflow_manager, sda_fabric_devices_workflow_manager,
+        sda_fabric_transit_workflow_manager, sda_fabric_virtual_networks_workflow_manager, sda_host_port_onboarding_workflow_manager,
+        site_workflow_manager, swim_workflow_manager, template_workflow_manager, user_and_role_workflow_manager.
+
