--- a/tests/integration/ccc_device_credential_management/tests/test_device_credential_management.yml
+++ b/tests/integration/ccc_device_credential_management/tests/test_device_credential_management.yml
@@ -16,8 +16,8 @@
         _api_port: "{{ _api_port }}"
         _version: "{{ _version }}"
         _debug: "{{ _debug }}"
-        catalystCenter_log: true
-        catalystCenter_log_level: DEBUG
+        log: true
+        log_level: DEBUG
         config_verify: true
 
   # - debug:
