--- a/.github/workflows/sanity_tests.yml
+++ b/.github/workflows/sanity_tests.yml
@@ -51,7 +51,7 @@ jobs:
         run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
       - name: Build custom Docker image for ansible-test
-        run: docker build -t custom-ansible-test -f Dockerfile.ansible-test
+        run: docker build -t custom-ansible-test -f Dockerfile.ansible-test .
 
       - name: Run sanity tests
         env:
