--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -24,8 +24,7 @@ releases:
         - Change catalystcenter_verify to verify
         - Change catalystcenter_version to version
         - Change catalystcenter_debug to debug
-        - The variables catalystcenter_host, catalystcenter_port, catalystcenter_username, catalystcenter_password,
-          catalystcenter_verify, catalystcenter_version and catalystcenter_debug are deprecated.
+        - The variables catalystcenter_host, catalystcenter_port, catalystcenter_username, catalystcenter_password, catalystcenter_verify, catalystcenter_version and catalystcenter_debug are deprecated.
         - But the replaced variables still work.
         - Fixed issues in module sda_anycast_gateways_v1
         - Fixed issues in module sda_layer3_virtual_networks_v1
@@ -35,24 +34,18 @@ releases:
       release_summary: Update Doc.
       minor_changes:
         - Updating the documentation for variables that are deprecated.
-
   2.1.2:
     release_date: "2025-02-28"
     changes:
       release_summary: Update Readme
       minor_changes:
         - Update Readme
-
   2.1.3:
     release_date: "2025-03-10"
     changes:
       release_summary: Update Modules
       minor_changes:
-        - Update cisco Modules device_credential_workflow_manager, inventory_workflow_manager, ise_radius_integration_workflow_manager,
-          network_settings_workflow_manager, pnp_workflow_manager, provision_workflow_manager, sda_fabric_devices_workflow_manager,
-          sda_fabric_transit_workflow_manager, sda_fabric_virtual_networks_workflow_manager, sda_host_port_onboarding_workflow_manager,
-          site_workflow_manager, swim_workflow_manager, template_workflow_manager, user_and_role_workflow_manager.
-
+        - Update cisco Modules device_credential_workflow_manager, inventory_workflow_manager, ise_radius_integration_workflow_manager, network_settings_workflow_manager, pnp_workflow_manager, provision_workflow_manager, sda_fabric_devices_workflow_manager, sda_fabric_transit_workflow_manager, sda_fabric_virtual_networks_workflow_manager, sda_host_port_onboarding_workflow_manager, site_workflow_manager, swim_workflow_manager, template_workflow_manager, user_and_role_workflow_manager.
   2.1.4:
     release_date: "2025-04-22"
     changes:
