--- a/playbooks/device_provision.yml
+++ b/playbooks/device_provision.yml
@@ -1,12 +1,9 @@
----
 - name: Provision and Re-provision wired and wireless devices
   hosts: localhost
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
-
+  gather_facts: false # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
   vars_files:
     - "{{ CLUSTERFILE }}"
-
   vars:
     catalystcenter_login: &catalystcenter_login
       _host: "{{ _host }}"
@@ -16,21 +13,18 @@
       _api_port: "{{ _api_port }}"
       _version: "{{ _version }}"
       _debug: "{{ _debug }}"
-
   tasks:
     - name: Provision a wired device to a site
       cisco.catalystcenter.provision_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         log: true
         state: merged
         config:
           - site_name: Global/USA/San Francisco/BGL_18
             management_ip_address: 204.1.2.2
-
-
     - name: Unprovision a wired device to a site
       cisco.catalystcenter.provision_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         log: true
         state: deleted
         config:
