--- a/playbooks/discovery_intent.yml
+++ b/playbooks/discovery_intent.yml
@@ -1,12 +1,9 @@
----
 - name: Discover devices using multiple discovery specific credentials and delete all the discoveries
   hosts: localhost
   connection: local
-  gather_facts: false  # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
-
+  gather_facts: false # This space must be "no". It was set to false due to formatting errors.but the correct value is "no".
   vars_files:
     - "{{ CLUSTERFILE }}"
-
   vars:
     catalystcenter_login: &catalystcenter_login
       _host: "{{ _host }}"
@@ -18,12 +15,10 @@
       _debug: "{{ _debug }}"
       log: true
       log_level: DEBUG
-
   tasks:
-
     - name: Execute discovery devices using MULTI RANGE with various global credentials
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: merged
         config_verify: true
         config:
@@ -43,7 +38,7 @@
               cli_credentials_list:
                 - description: ISE
                   username: cisco
-                - description: CLI1234  # Incorrect name passed
+                - description: CLI1234 # Incorrect name passed
                   username: cli
               http_read_credential_list:
                 - description: HTTP Read
@@ -52,10 +47,9 @@
                 - description: snmpV3
                   username: snmpV3
             protocol_order: ssh
-
     - name: Execute discovery of single device using various discovery specific credentials and all the global credentials
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: merged
         config_verify: true
         config:
@@ -87,10 +81,9 @@
                 privacy_type: AES256
                 privacy_password: Lablab#1234
             protocol_order: ssh
-
     - name: Execute discovery of single device using various discovery specific credentials only
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: merged
         config_verify: true
         config:
@@ -123,20 +116,19 @@
                 privacy_type: AES256
                 privacy_password: Lablab#1234
             protocol_order: ssh
-
     - name: Execute discovery devices using MULTI RANGE with various discovery specific credentials and all global credentials (max 5 allowed)
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: merged
         config_verify: true
         config:
           - discovery_type: "MULTI RANGE"
             discovery_name: Multi_range
             ip_address_list:
-              - 204.1.2.1-204.1.2.100  # It will be taken as 204.1.2.1 - 204.1.2.1
+              - 204.1.2.1-204.1.2.100 # It will be taken as 204.1.2.1 - 204.1.2.1
               - 205.2.1.1-205.2.1.10
             ip_filter_list:
-              - 204.1.2.5  # Devie with IP 204.1.2.5 won't be discovered
+              - 204.1.2.5 # Devie with IP 204.1.2.5 won't be discovered
             discovery_specific_credentials:
               cli_credentials_list:
                 - username: admin
@@ -161,36 +153,33 @@
             start_index: 1
             records_to_return: 1000
             snmp_version: v2
-
     - name: Execute discovery devices using CDP/LLDP/CIDR leveraging discovery specific credentials and all the global credentials
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: merged
         config_verify: true
         config:
           - discovery_name: CDP_Test_1
-            discovery_type: "CDP"  # Can be LLDP and CIDR
-            ip_address_list:   # List length should be one
+            discovery_type: "CDP" # Can be LLDP and CIDR
+            ip_address_list: # List length should be one
               - 204.1.2.1
-            cdp_level: 2  # Instead use lldp_level for LLDP and prefix length for CIDR
+            cdp_level: 2 # Instead use lldp_level for LLDP and prefix length for CIDR
             discovery_specific_credentials:
               cli_credentials_list:
                 - username: admin
                   password: maglev123
                   enable_password: maglev123
             protocol_order: ssh
-
     - name: Execute deletion of single discovery from the dashboard
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: deleted
         config_verify: true
         config:
           - discovery_name: CDP_Test_1
-
     - name: Execute deletion of all the discoveries from the dashboard
       cisco.catalystcenter.discovery_intent:
-        <<: *catalystcenter_login
+        !!merge <<: *catalystcenter_login
         state: deleted
         config_verify: true
         config:
